--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "cit270",
   "version": "1.0.0",
   "description": "",
-  "main": "helloworld.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +19,11 @@
   },
   "homepage": "https://github.com/18jkilpack/CIT-270-Authentication-Service#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "nodemon": "^2.0.20"
+    "md5": "^2.3.0",
+    "nodemon": "^2.0.20",
+    "redis": "^4.3.1",
+    "uuid": "^9.0.0"
   }
 }
