--- a/busybox.yaml
+++ b/busybox.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: busybox
+  name: busybox-jacksonkilpack
   namespace: default
 spec:
   containers:
@@ -9,6 +9,13 @@ spec:
     command:
       - sleep
       - "3600"
+    resources:
+      requests:
+        cpu: .125
+        memory: "500Mi"
+      limits:
+        cpu: .125
+        memory: "600Mi"
     imagePullPolicy: IfNotPresent
-    name: busybox
+    name: busybox-jacksonkilpack
   restartPolicy: Always
