--- a/cit-270-1999.yaml
+++ b/cit-270-1999.yaml
@@ -29,8 +29,20 @@ spec:
           limits:
             cpu: .125
             memory: "600Mi"
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
       volumes:
       - name: ssl
         secret:
           secretName: ssl.secret.jackson
+---         
+apiVersion: v1
+kind: Service 
+metadata:
+  name: redalphaj-loadbalancer
+spec:
+  selector:
+    app: redalphaj
+  type: LoadBalancer
+  ports:
+  - port: 443
+    targetPort: 443
