--- a/cit-270-1999.yaml
+++ b/cit-270-1999.yaml
@@ -22,6 +22,12 @@ spec:
           mountPath: "/usr/src/app/SSL"
         command: ["npm"]
         args: ["run", "start"]
+        env:
+        - name: REDIS_PASS
+          valueFrom:
+            secretKeyRef:
+              name: redis-secrets-jackson
+              key: REDIS_PASS
         resources:
           requests:
             cpu: .125
